# mama-ai

./: .gitignore  .travis.yml  Cargo.toml  Procfile  README.md  rust-toolchain
.github/workflows/: build.yml
client/: main.py  mama-ai.service  ui.py
src/: main.rs  registry.rs  value.rs
src/controller/: aqi.rs  index.rs  mod.rs
