[package]
name = "mama-ai"
version = "0.1.0"
authors = ["Kengo TODA <skypencil@gmail.com>"]
license = "Apache-2.0"

[dependencies]
lettre = "0.7"
iron = "0.5.1"
router = "0.5.1"
hyper = "0.10.13"
native-tls = "0.1"
hyper-native-tls = "*"
log = "0.3"
env_logger = "0.3"
postgres = { version = "0.15", features = ["with-chrono"]}
chrono = "0.4"
